front/fix(message): change z-index and shadowing for media messages

--- a/front/src/entities/Message/ui/MessageTime/MessageTime.module.css
+++ b/front/src/entities/Message/ui/MessageTime/MessageTime.module.css
@@ -1,6 +1,6 @@
 @reference "../../../../app/styles/tailwind.css";
 .absolute {
-    @apply absolute bottom-1 right-1;
+    @apply absolute bottom-2 right-1;
 }
 
 
